--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,4 @@ POSTGRES_PASSWORD="example"
 POSTGRES_DB="saver_tounsi"
 NEXTAUTH_SECRET="your-nextauth-secret"
 NEXTAUTH_URL="http://localhost:3000"
+NEXT_PUBLIC_API_URL="http://localhost:3000"
