--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@radix-ui/react-tabs": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.6",
+    "@tanstack/react-query": "^5.66.0",
     "@vercel/speed-insights": "^1.1.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
@@ -43,12 +44,14 @@
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "font-awesome": "^4.7.0",
+    "framer-motion": "^12.4.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.473.0",
     "mysql2": "^3.12.0",
     "next": "15.1.4",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
+    "react-confetti": "^6.2.2",
     "react-day-picker": "^9.5.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -65,6 +68,8 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "eslint": "9.19.0",
+    "eslint-config-next": "15.1.6",
     "postcss": "^8",
     "prisma": "^6.3.0",
     "tailwindcss": "^3.4.1",
