--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@radix-ui/react-toast": "^1.2.4",
     "@radix-ui/react-tooltip": "^1.1.6",
     "@tanstack/react-query": "^5.66.0",
+    "@types/react-datepicker": "^6.2.0",
     "@vercel/speed-insights": "^1.1.0",
     "axios": "^1.7.9",
     "bcrypt": "^5.1.1",
@@ -54,6 +55,7 @@
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
     "react-confetti": "^6.2.2",
+    "react-datepicker": "^8.3.0",
     "react-day-picker": "^9.5.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
